# lua-resty-grpc-client

./: .gitignore  CMakeLists.txt  README.md  build.sh  cpluslua.lua  ffi_grpc.lua  main.cpp  proto_gen_grpc.sh
protos/: basic.proto  diaochan.proto
src/: libcgrpc.cc
src/diaochan/: diaochan.cc  diaochan.h
src/helloworld/: greeter_client.cc  greeter_client.h  libclient.cc
src/pb/: basic.grpc.pb.cc  basic.grpc.pb.h  basic.pb.cc  basic.pb.h  diaochan.grpc.pb.cc  diaochan.grpc.pb.h  diaochan.pb.cc  diaochan.pb.h
